# cones_perception

./: CMakeLists.txt  LICENSE  README.md  package.xml
cones_clouds/: cones.csv  cones.pkl
config/: cones_detection_params_fsai.yaml  cones_detection_params_our.yaml  cones_detection_params_simulation.yaml  ground_removal_params.yaml
include/perception_handling/: color.hpp  color_classifier.hpp  utils.hpp
include/slam/: utils.hpp
launch/: cones_detection.launch  cones_perception.launch  cones_perception_rviz.launch  for_simulation.launch  ground_removal.launch  slam.launch
models/dam_net/: dam_net.tflite  keras_metadata.pb  saved_model.pb
models/dam_net/variables/: variables.data-00000-of-00001  variables.index
rviz/: cones_rviz_config.rviz  config.rviz  for_simulation.rviz  ground_removal.rviz  rviz_config.rviz  rviz_config_cloud.rviz
scripts/: color_classifier_server.py
src/: color_classifier_server.cpp  cone_detection.cpp  ground_removal.cpp  slam.cpp  slammer.cpp
src/perception_handling/: utils.cpp
srv/: ClassifyColorSrv.srv
